--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,12 +6,41 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>jQuery portfolio</title>
+        <title>Bayern Munich</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     </head>
     <body>
-        <script type="text/javascript" 
-         src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+        <div class="Nike">
+            <h1>3rd portfolio</h1>
+            <p id="replaceWText">HELLO</p>
+            <p id="removePara">Bye</p>
+            <p id="randPara">ADDING</p>
+            <p>FADING</p>
+
+            <div id=Adidas>
+                <h3>???</h3>
+                <p>WHOS THE BES GOALIE IN THE WORLD???</p>
+                <h3>???</h3>
+                <p>Bayern Munichs goalie</p>
+                <h3>????</h3>
+                <p><iframe width="854" height="510" src="//www.youtube.com/embed/tNM8PyClmi4" frameborder="0" allowfullscreen></iframe></p>
+            </div>
+
+            <h1>the best is </h1>
+            <p>Manuel</p>
+            <p>Neuer</p>
+            <p>better than any other goalie</p>
+
+
+        </div>
+
+        <script type="text/javascript" src="script.js"></script>
+
+
+
     </body>
 </html>
