--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,41 +6,39 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bayern Munich</title>
+        <title>Cristian Robles</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+        <link type='text/css' rel='stylesheet' href='Css.css'>
     </head>
     <body>
-        <div class="Nike">
+        <div class="TR">
             <h1>3rd portfolio</h1>
-            <p id="replaceWText">HELLO</p>
-            <p id="removePara">Bye</p>
-            <p id="randPara">ADDING</p>
-            <p>FADING</p>
+            <p id="replaceWText">Click to replace</p>           
+            <p id="randPara">click to add</p>
+            <p id="removePara">tap to remove the added</p>
+            
 
             <div id=Adidas>
                 <h3>???</h3>
-                <p>WHOS THE BES GOALIE IN THE WORLD???</p>
+                <p>Hello</p>
                 <h3>???</h3>
-                <p>Bayern Munichs goalie</p>
+                <p>my name is Cristian</p>
                 <h3>????</h3>
-                <p><iframe width="854" height="510" src="//www.youtube.com/embed/tNM8PyClmi4" frameborder="0" allowfullscreen></iframe></p>
+                <p>my last name is Robles</p>
             </div>
 
-            <h1>the best is </h1>
-            <p>Manuel</p>
-            <p>Neuer</p>
-            <p>better than any other goalie</p>
+            <h1>hello</h1>
+            <p>hi</p>
+            <p>bye</p>
+            <p>hi</p>
 
 
         </div>
 
         <script type="text/javascript" src="script.js"></script>
-
-
-
     </body>
 </html>
